# mai_data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli_split_dump.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
mai_data/: __init__.py  cli.py  gh_pr_ingest.py  pr_split.py  size_guard.py
presets/: big_prs.sql  big_prs_slice.sql
tests/: test_size_guard.py
